[gd_scene load_steps=12 format=3 uid="uid://dtul3xn0156ts"]

[ext_resource type="Script" uid="uid://dsjj657c20m8u" path="res://Scripts/main_menu.gd" id="1_2445m"]
[ext_resource type="Theme" uid="uid://b180iuf8ql5ut" path="res://Assets/Themes/geral_theme.tres" id="1_evfxc"]
[ext_resource type="Texture2D" uid="uid://dsrrgxvyev1we" path="res://Assets/Images/Logo.png" id="3_2445m"]
[ext_resource type="LabelSettings" uid="uid://cfimeh5jlysyk" path="res://Assets/Themes/Label/titleScreen.tres" id="3_p0xwv"]
[ext_resource type="LabelSettings" uid="uid://bs4aidgytqw7o" path="res://Assets/Themes/Label/titleSection.tres" id="4_nljct"]
[ext_resource type="StyleBox" uid="uid://daxeqam8tecqd" path="res://Assets/Themes/separator.tres" id="5_txrji"]
[ext_resource type="LabelSettings" uid="uid://udgs1rxpo3em" path="res://Assets/Themes/Label/option.tres" id="6_y6oel"]
[ext_resource type="AudioStream" uid="uid://u7p101xc14vv" path="res://Assets/Audio/Menu.mp3" id="10_pjnmr"]
[ext_resource type="AudioStream" uid="uid://elbglqxdbvq4" path="res://Assets/Audio/UIAccept.mp3" id="11_v7py2"]
[ext_resource type="AudioStream" uid="uid://5mv6kfwfqjju" path="res://Assets/Audio/UIMove.mp3" id="12_fher3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cm266"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_evfxc")
script = ExtResource("1_2445m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
texture = ExtResource("3_2445m")

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="PanelSettings" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -340.0
offset_right = 450.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelSettings"]
custom_minimum_size = Vector2(900, 600)
layout_mode = 2
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="PanelSettings/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2
text = "Settings"
label_settings = ExtResource("3_p0xwv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator1" type="HSeparator" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ScreenSection" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2

[node name="TitleSection" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/ScreenSection"]
layout_mode = 2
text = "Screen"
label_settings = ExtResource("4_nljct")

[node name="Separator1" type="HSeparator" parent="PanelSettings/PanelContainer/Margin/Content/ScreenSection"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = ExtResource("5_txrji")

[node name="SectionOptions" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/ScreenSection"]
layout_mode = 2

[node name="FullscreenOption" type="HBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/ScreenSection/SectionOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/ScreenSection/SectionOptions/FullscreenOption"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckButton" parent="PanelSettings/PanelContainer/Margin/Content/ScreenSection/SectionOptions/FullscreenOption"]
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_cm266")

[node name="Separator2" type="HSeparator" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AudioSection" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2

[node name="TitleSection" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection"]
layout_mode = 2
text = "Audio"
label_settings = ExtResource("4_nljct")

[node name="Separator1" type="HSeparator" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = ExtResource("5_txrji")

[node name="SectionOptions" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Master" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions"]
layout_mode = 2

[node name="TitleOption1" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Master"]
layout_mode = 2
text = "Master"
label_settings = ExtResource("6_y6oel")

[node name="SliderMaster" type="HBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Master"]
layout_mode = 2

[node name="SliderMaster" type="HSlider" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Master/SliderMaster"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="PercentMaster" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Master/SliderMaster"]
unique_name_in_owner = true
layout_mode = 2
text = "0%"

[node name="Music" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions"]
layout_mode = 2

[node name="TitleOption1" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Music"]
layout_mode = 2
text = "Music"
label_settings = ExtResource("6_y6oel")

[node name="SliderMusic" type="HBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Music"]
layout_mode = 2

[node name="SliderMusic" type="HSlider" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Music/SliderMusic"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="PercentMusic" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Music/SliderMusic"]
unique_name_in_owner = true
layout_mode = 2
text = "0%"

[node name="SFX" type="VBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions"]
layout_mode = 2

[node name="TitleOption1" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/SFX"]
layout_mode = 2
text = "SFX"
label_settings = ExtResource("6_y6oel")

[node name="SliderSFX" type="HBoxContainer" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/SFX"]
layout_mode = 2

[node name="SliderSFX" type="HSlider" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/SFX/SliderSFX"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="PercentSFX" type="Label" parent="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/SFX/SliderSFX"]
unique_name_in_owner = true
layout_mode = 2
text = "0%"

[node name="Separator3" type="HSeparator" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Apply" type="Button" parent="PanelSettings/PanelContainer/Margin/Content"]
layout_mode = 2
size_flags_horizontal = 4
text = "Apply"

[node name="Audio" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_pjnmr")
autoplay = true
bus = &"Music"

[node name="SFX_UI_accept" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("11_v7py2")
bus = &"SFX"

[node name="SFX_UI_move" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("12_fher3")
bus = &"SFX"

[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/VBoxContainer2/Play" to="Audio/SFX_UI_move" method="play" binds= [0.0]]
[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/VBoxContainer2/Settings" to="Audio/SFX_UI_move" method="play" binds= [0.0]]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/Settings" to="PanelSettings" method="show"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/Settings" to="PanelSettings" method="set_mouse_filter" binds= [0]]
[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/VBoxContainer2/Quit" to="Audio/SFX_UI_move" method="play" binds= [0.0]]
[connection signal="toggled" from="PanelSettings/PanelContainer/Margin/Content/ScreenSection/SectionOptions/FullscreenOption/FullscreenCheckBox" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Master/SliderMaster/SliderMaster" to="." method="_on_slider_master_value_changed"]
[connection signal="value_changed" from="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/Music/SliderMusic/SliderMusic" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="PanelSettings/PanelContainer/Margin/Content/AudioSection/SectionOptions/SFX/SliderSFX/SliderSFX" to="." method="_on_slider_sfx_value_changed"]
[connection signal="mouse_entered" from="PanelSettings/PanelContainer/Margin/Content/Apply" to="Audio/SFX_UI_move" method="play" binds= [0.0]]
[connection signal="pressed" from="PanelSettings/PanelContainer/Margin/Content/Apply" to="PanelSettings" method="hide"]
[connection signal="pressed" from="PanelSettings/PanelContainer/Margin/Content/Apply" to="Audio/SFX_UI_accept" method="play" binds= [0.0]]
